07 Kubernetes Deployment/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bizaway-api-ingress
  namespace: bizaway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:1234567891011:certificate/bizaway-wildcard-certificate-arn
spec:
  rules:
    - host: api.bizaway.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bizaway-api-service
                port:
                  number: 80
